LUCENE-6547: add GeoPointDistanceQuery and fix GeoPointInBBoxQuery to handle dateline crossing
git-svn-id: https://svn.apache.org/repos/asf/lucene/dev/branches/branch_5x@1691660 13f79535-47bb-0310-9956-ffa450edef68